--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "~1.10.1",
     "jsx-loader": "~0.13.2",
     "css-loader": "~0.16.0",
-    "style-loader": "~0.12.3"
+    "style-loader": "~0.12.3",
+    "react-router": "~0.13.3"
   }
 }
